--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -22,7 +22,7 @@ jobs:
           BLOCKS: -> # optional
           CODE_LANG: ts # optional
           TIME_RANGE: all_time # optional
-          # LANG_COUNT: 10 # optional
+          LANG_COUNT: 50 # optional
           SHOW_TIME: true # optional
           SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
