--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -26,7 +26,7 @@ jobs:
           SHOW_TIME: true # optional
           SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
-          STOP_AT_OTHER: true # optional
+          # STOP_AT_OTHER: true # optional
           IGNORED_LANGUAGES: YAML JSON TOML Markdown Text MDX Bash # optional
           ### commit
           COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
